Version 0.7:
--------------

* Port to Gtk+3 (new dependency on gir1.2-poppler-0.18).

* Port to Python 3 (new alternative dependency on python3-pypdf2).


Version 0.6:
--------------

* Cairo based rendering.

* Zooming support.

* Progressbar indicating loading of files.

* New user interface with a conventional menubar and toolbar.

* Export only selected pages option in the right-click menu from
  Alexander Hirzel.

* Hungarian, Japanese and Chinese translations.


Version 0.5.1:
--------------

* Many bug fixes (3011515, 3027933, 3030180).

* Czech translation.


Version 0.5:
--------------

* "About" dialog from rodolphe.

* Italian and French translations.

* Remember last export/import directory.

* Replace confirmation message from ftsamis.

* Failed to export error message from Külaots.

* Patch fixing multiple rotations from Külaots.


Version 0.4.2:
--------------

* Patch cancel-file-open-fix.patch from Serafeim Zanikolas.

* Patch fix-temp-dirname.patch from Serafeim Zanikolas.

* The problem with thumbnail creation on Xservers with color depth other
  than 24 has been fixed. Closes bug #2789181.

* Pressing quit button during loading a document doesn't freeze the
  application anymore.

* Dimensions of the main window respecting small screen sizes.


Version 0.4.1:
--------------

* Forced MediaBox dimensions returned from pyPdf to be of type float.

* Fixed a bug which messed up cropping if the imported document included
  already rotated pages.


Version 0.4:
--------------

* The library python-poppler replaced ghostscript for the rendering of
  pdf pages.

* A multi-threading mechanism has been implemented in order to prevent
  program from becoming inactive during loading of pdf files with many
  pages.

* A workaround for bug lp:#355479 has been included.

* File permissions have been corrected.

* The patch from fabianaffolter has been applied on the .desktop file
  and the Category of the application has been changed from "Graphics"