@@ -1,12 +1,12 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
 # -*- coding: utf-8 -*-
 
 """
 
  PdfShuffler 0.7.0 - GTK+ based utility for splitting, rearrangement and
  modification of PDF documents.
- Copyright (C) 2008-2014 Konstantinos Poulios
- <https://sourceforge.net/projects/pdfshuffler>
+ Copyright (C) 2008-2018 Konstantinos Poulios
+ <https://savannah.nongnu.org/projects/pdfshuffler/>
 
  This file is part of PdfShuffler.
 
