@@ -3,7 +3,9 @@ Version 0.7:
 
 * Port to Gtk+3 (new dependency on gir1.2-poppler-0.18).
 
-* Port to Python 3 (new alternative dependency on python3-pypdf2).
+* Switching to PyPDF2 (new dependency on python3-pypdf2).
+
+* Switching to Python 3
 
 
 Version 0.6:
